Add get Slice
