# routers/commentsRouter_controllers.go
@@ -9,6 +9,18 @@ func init() {
 
     beego.GlobalControllerRouter["github.com/trustkeys/trustkeyskv/controllers:PublicKVController"] = append(beego.GlobalControllerRouter["github.com/trustkeys/trustkeyskv/controllers:PublicKVController"],
         beego.ControllerComments{
+            Method: "GetSliceFrom",
+            Router: `/GetSliceFrom/:appID/:pubKey`,
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(
+				param.New("pubKey", param.IsRequired),
+				param.New("appID", param.IsRequired),
+			),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["github.com/trustkeys/trustkeyskv/controllers:PublicKVController"] = append(beego.GlobalControllerRouter["github.com/trustkeys/trustkeyskv/controllers:PublicKVController"],
+        beego.ControllerComments{
             Method: "Get",
             Router: `/get`,
             AllowHTTPMethods: []string{"get"},
